[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "proxy"

[[bin]]
name = "proxy"

[dependencies]
axum = "0.5"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4" }
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.3", features = ["gateway", "trace"] }
http = "0.2.8"
thiserror = "1.0"
anyhow = "1.0"
tower-service = "0.3.2"
